--- a/atcrowdfunding01-admin-parent/atcrowdfunding03-admin-component/pom.xml
+++ b/atcrowdfunding01-admin-parent/atcrowdfunding03-admin-component/pom.xml
@@ -103,14 +103,14 @@
             <scope>provided</scope>
         </dependency>
     <!-- Spring 进行 JSON 数据转换依赖 -->
-<!--    <dependency>-->
-<!--        <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--        <artifactId>jackson-core</artifactId>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--        <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--        <artifactId>jackson-databind</artifactId>-->
-<!--    </dependency>-->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+    </dependency>
     <!-- JSTL 标签库 -->
 <!--    <dependency>-->
 <!--        <groupId>jstl</groupId>-->
