--- a/atcrowdfunding01-admin-parent/pom.xml
+++ b/atcrowdfunding01-admin-parent/pom.xml
@@ -114,13 +114,12 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
                 <version>2.9.8</version>
-                <type>bundle</type>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--                <artifactId>jackson-databind</artifactId>-->
-<!--                <version>2.9.8</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.9.8</version>
+            </dependency>
             <!-- JSTL 标签库 -->
 <!--            <dependency>-->
 <!--                <groupId>jstl</groupId>-->
@@ -142,12 +141,12 @@
                 <scope>provided</scope>
             </dependency>
             <!-- JSP 页面使用的依赖 -->
-            <dependency>
-                <groupId>javax.servlet.jsp</groupId>
-                <artifactId>jsp-api</artifactId>
-                <version>2.1.3-b06</version>
-                <scope>provided</scope>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>javax.servlet.jsp</groupId>-->
+<!--                <artifactId>jsp-api</artifactId>-->
+<!--                <version>2.1.3-b06</version>-->
+<!--                <scope>provided</scope>-->
+<!--            </dependency>-->
             <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 <!--            <dependency>-->
 <!--                <groupId>com.google.code.gson</groupId>-->
@@ -172,6 +171,10 @@
 <!--                <artifactId>spring-security-taglibs</artifactId>-->
 <!--                <version>4.2.10.RELEASE</version>-->
 <!--            </dependency>-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+            </dependency>
     </dependencies>
     </dependencyManagement>
 
